fix: overflowing icons

--- a/src/components/piece/Piece.css
+++ b/src/components/piece/Piece.css
@@ -14,7 +14,7 @@
     opacity: 0.8;
 }
 .piece > img {
-    height: 10vh;
+    height: 6vh;
     position: absolute;
     transform: translate(-50%, -50%);
 }
